Working v0.7 - before writing to files

--- a/client/Elevator.html
+++ b/client/Elevator.html
@@ -1,7 +1,9 @@
 <template name="elevatorPost">
+
     <form class="main form page">
+        <div align="center"><label class="control-label" >{{elevatorID}}</label></div>
         <div class="form-group" dir="rtl">
-            <label class="control-label" for="url">כותרת</label>
+            <label class="control-label" for="title">כותרת</label>
             <div class="controls">
                 <input name="title" id="title" type="text" value="{{title}}" class="form-control"/>
             </div>
@@ -13,6 +15,6 @@
             </div>
         </div>
         <input type="submit" value="שמור" class="btn btn-primary"/>
-        <input type="submit" value="מחק" class="btn btn-error"/>
+        <!--<div align="right"> <button align="right">יציאה</button></div>-->
     </form>
 </template>
