--- a/client/layout.html
+++ b/client/layout.html
@@ -4,6 +4,11 @@
             <div class="navbar-header">
                 <a class="navbar-brand" href="/">SmartElevator</a>
             </div>
+            <div class="collapse navbar-collapse" id="navigation">
+                <ul class="nav navbar-nav navbar-right">
+                    {{#if currentUser}}{{> logout}}{{/if}}
+                 </ul>
+            </div>
         </header>
         <div id="main">
             {{> yield}}
