--- a/client/admin/AdminPage.html
+++ b/client/admin/AdminPage.html
@@ -1,16 +1,16 @@
-<template name="adminPage">
-    <form class="registerForm" >
+<template name="adminPage" >
+    <form >
+        <h3 align="center">Admin Consul</h3>
         <table align="center">
-            <tr><td>User: </td><td><input type="input" name="user"></td></tr>
+            <tr><td>User:</td><td><input type="input" name="user"></td></tr>
             <tr><td>Password: </td><td><input type="password" name="password"></td></tr>
             <tr><td>Description: </td><td><input type="input" name="Desc"></td></tr>
             <tr><td>ElevatorID: </td><td><input type="input" name="ElevatorID"></td></tr>
-            <tr><td colspan="2" align="center"><input type="submit" value="Create User"></td></tr>
+            <div class="form-group"></div>
+            <tr><td colspan="2" align="right"><input type="submit" value="Create User"></td></tr>
         </table>
     </form>
-
-
-
+    <div class="form-group"></div>
     <table border="1" align="center">
         <tr><th>User</th><th>ElevatorID</th><th>Description</th><th></th><th></th></tr>
         {{#each allusers}}
@@ -18,7 +18,7 @@
                 <td><h6>{{elevatorID}}</h6></td>
                 <td><h6>{{description}}</h6></td>
                 <td><button id="deleteUser" class="btn btn-danger btn-xs" >Delete User</button></td>
-                <td><button id="preview" class="btn btn-success btn-xs" >Preview</button></td>
+                <td><button id="preview" onClick="window.open('http://ecbiz102.inmotionhosting.com/~tcmher5/consul/Tablets/{{elevatorID}}/SmartElevator/Htmls/messagePage.html');" class="btn btn-success btn-xs" >Preview</button></td>
             </tr>
         {{/each}}
     </table>
