Working v0.9.6 - Added "delete user" function

--- a/client/admin/AdminPage.html
+++ b/client/admin/AdminPage.html
@@ -17,8 +17,8 @@
             <tr><td id="user"><h6>{{username}}</h6></td>
                 <td><h6>{{elevatorID}}</h6></td>
                 <td><h6>{{description}}</h6></td>
-                <td><button id="deleteUser" class="btn btn-danger btn-xs" >Delete User</button></td>
-                <td><button id="preview" onClick="window.open('http://ecbiz102.inmotionhosting.com/~tcmher5/consul/Tablets/{{elevatorID}}/SmartElevator/Htmls/messagePage.html');" class="btn btn-success btn-xs" >Preview</button></td>
+                <td><button id="deleteUser" class="delete btn btn-danger btn-xs" >Delete User</button></td>
+                <td><button id="preview" onClick="window.open('http://212.179.112.63/apps/consul/data/{{elevatorID}}/SmartElevator/Htmls/messagePage.html');" class="btn btn-success btn-xs" >Preview</button></td>
             </tr>
         {{/each}}
     </table>
